syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hedera.services.stream.proto";
option java_multiple_files = true;

import "BasicTypes.proto";
import "Timestamp.proto";

message TokenUnitBalance {
    TokenID tokenId = 1; // A unique token id
    uint64 balance = 2; // A number of transferable units of the identified token
}

/* Includes all currency balances (both hbar and token) of a single account in the ledger. */
message SingleAccountBalances {
    AccountID accountID = 1; // The account
    uint64 hbarBalance = 2; // The account's hbar balance
    repeated TokenUnitBalance tokenUnitBalances = 3; // The list of the account's token balances
}

/* Includes all currency balances (both hbar and token) of all accounts in the ledger. */
message AllAccountBalances {
    Timestamp consensusTimestamp = 1; // An instant in consensus time 
    repeated SingleAccountBalances allAccounts = 2; // The list of account balances for all accounts, after handling all transactions with consensus timestamp up to and including the above instant
}
